--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -474,13 +474,15 @@
       </nav>
 
       <!-- Right: page badge -->
-      <div class="ref-header-right">
-        <div class="current-page-badge">
-          <span class="page-icon">△</span>
-          <span class="page-label">The Prayer</span>
-        </div>
-      </div>
-    </div>
+   <div class="ref-header-right">
+  <!-- Adaptive reflection cover (auto-filled by JS) -->
+  <div class="header-cover-slot"></div>
+
+  <div class="current-page-badge">
+    <span class="page-icon">△</span>
+    <span class="page-label">The Prayer</span>
+  </div>
+</div>
 
     <!-- Overlay (clickable to close) -->
     <div class="nav-overlay" aria-hidden="true"></div>
@@ -675,5 +677,24 @@
       }
     }
   </script>
+  <script>
+document.addEventListener('DOMContentLoaded', () => {
+  const heroImg = document.querySelector('.ref-hero-cover');
+  const slot = document.querySelector('.header-cover-slot');
+
+  if (!heroImg || !slot) return;
+
+  // Create header image
+  const headerImg = document.createElement('img');
+  headerImg.src = heroImg.src;
+  headerImg.alt = heroImg.alt || 'Reflection cover';
+
+  // Inject into header
+  slot.appendChild(headerImg);
+
+  // Optional: hide large hero image
+  heroImg.style.display = 'none';
+});
+</script>
 </body>
 </html>
